fix : bad practices against postgres wiki